first post's draft

--- a/src/pages/blog/entry_001.mdx
+++ b/src/pages/blog/entry_001.mdx
@@ -54,12 +54,56 @@ And then October came in. Thanks to this new job, I was presented formally with 
 
 However... this is where things went south. I started to search on the internet: _"Is piracy a sin?"_. This **ONE** question would open the Pandora's Box to a plethora of other questions. The theological war on reddit and youtube is insanely hostile–one person says something, then IMMEDIATELY another one proposes a counterargument. Then you would have posts contradicting each other. People using big words seemingly out of context. Content Creators on youtube trying to explain really intrincate and more complex theological concepts into very short videos only causing more confusion.
 
-The **Information Overload** was so extreme that I got obsessed over the idea of **_"Is this a sin?"_**. I would doubt constantly of my actions and my thoughts. Would get paralized. And since I am a person that is way too curious by nature, I keep asking around. Eventually, this would turn into me obsessively asking ChatPGT (and later, DeepSeek) or flavors of it like AskAquinas or MagisteriumAI, all the doubts I had. I would debate with it, argue with it, fight with it, desperately trying to convine it of my arguments and why they are wrong on their take–but it was all futile. I was convinced of most if not every AI-generated response.
+The **Information Overload** was so extreme that I got obsessed over the idea of **_"Is this a sin?"_**. I would doubt constantly of my actions and my thoughts. Would get paralized. And since I am a person that is way too curious by nature, I keep asking around. Eventually, this would turn into me obsessively asking ChatPGT (and later, DeepSeek) or flavors of it like AskAquinas or MagisteriumAI, all the doubts I had. I would debate with it, argue with it, fight with it, desperately trying to convince it of my arguments and why LLMs are wrong on their take–but it was all futile. I was convinced of most if not every AI-generated response.
 
 I stopped thinking. I stopped having critical thinking.
 
-I stopped being... me.
+I became perpetually afraid.
 
 And eventualy–I crashed.
 
 ## The shackles around my neck
+
+With the constant anxiety driven by the endless barrage of intrusive thoughts, my life quality declined to the point some things on my life started to be shaped around some _ritualistic behaviours_. Second, triple guessing my day to day decisions was... for a lack of words, annoying. It **is** still annoying when it happens, but we will get there later.
+
+At some point, whenever an intrusive thought came in, knocking the door full force, the surge of anxiety felt like shackles squeezing my neck really, really thight. The mental warfare was already a lot to deal with, and adding _physical_ pain as well on top... yeah, not the most pleasant experience possible.
+
+So far I have mentioned the OCD situation... but that is not all the tale. To not go more in depth than I already had so far, the summary is that I am also dealing with an addiction/vice (which has gotten reduced inmensely, getting into that last mile), and other issues related to my mental health (issues with guilt, issues with my self-steem, etc).
+
+When things converged, the sensation on my chest and specially around my neck became really unbearable at times. Ya know, it was really though to deal with both mind and body at the same time.
+
+Sometimes it gets annoying enough that I just concede and stop doing whatever activity I am doing on my free time, and go to lay down on bed to rest.
+
+So... is that it? Was this post just me lore-dumping my whole adventure for the past year? I mean, it _is_ exactly like that–but this is not the end of the story.
+
+## Keep moving forward
+
+At some point throughout July-August 2025, it finally clicked: I was **not** handling my condition properly. To borrow one thing my therapist mentioned, I _clinged into my diagnostic_. What does that mean? What I understood is that, I got fixated on my condition so much that it made me focus on _"having OCD"_ and really play into the role of the sick person. Whenever something related to my OCD came up, which was a constant every day, I felt sick and reminded myself constantly that _"right, I suffer from OCD, poor me"_, to put it in words. This may not be the best description I could give right now, but more or less is the idea, me thinks.
+
+So! Once I came to that realization, there was only one response: change my focus and apply **_everything_** I have learned through one year of psychotherapy, and be relentless about it.
+
+From the many techniques I learned through this journey, one in particular has became my go-to and by far my favorite. Let me tell you about it.
+
+During one sesion not so long ago, my therapist told me to imagine a jar, and the intrusive thoughts would be wandering around, and the idea was to grab them and put them inside the jar. Well, when we did the excercise, I imagined the thoughts as strips of paper, and then would put them inside the jar. Then, I imagined myself going to a trash bin to unload the gargabe into it.
+
+Well, time passed and whenever I realized that "I did not empty the jar", I would feel anxious and kinda guilty, for more weird that it sounds. So, I came up with this brilliant idea: the jar would now be a vase that would vacuum the thoughts (still represented by strips of paper), and then dispense of it like a shredder. And the cherry on top would be that this would happen through big lips, like if it were an old cartoon character. When the job was done, "Boss", as I call them, would give me a thumbs up (also in cartoon fashion. Imagine a big hands doing a thumbs up).
+
+This whacky and silly cartoon-like character I came up with has been the bread-and-butter of my arsenal of techniques for OCD. And I am really glad that it has been useful like you have no idea.
+
+On top of it, the decision of **stopping paying attention to the opinion of people on the internet** has been the real turning point in my recovery journey. Adding more and more voices, each one conflicting and fighting with another, just added more and more anxiety. It was really the worst decision I could make.
+
+Letting go of constant search and research was the best decision ever.
+
+## Closing words
+
+This post has been quite lenghty, and is the first time in a _reaaaaaaaally_ long time since I have writen a personal blog. Even thought I have gone through the maze of many wrong decisions more than the good outcome, I do want to make it clear: **_I am doing better as of today_**.
+
+My mood has increased. My sleep schedule has been seriously improven. I have _started to draw again after a long hiatus_–although my consistency is still a work in progress.
+
+My journey through recovery from OCD is not done yet. I am not yet in that last mile, and there is for sure still a path to go through until... well I do not know. But I am ready to take onto the challenge.
+
+I give inmense thanks to God for helping me through this journey. On every step. Every single day. Thank you, God, for my family, for the amazing friends, my therapist and psychiatrist, the priest at the local parish, and many other lovely individuals that have been there rooting for me.
+
+Thank you to you, reader, for making it to this part. You are amazing, and I wish you the best for your life.
+
+–Kiseki.
